UDNP-1129: Fixed tab jumping on hover

--- a/src/styles/base/_buttons.scss
+++ b/src/styles/base/_buttons.scss
@@ -362,7 +362,7 @@ $lt-caret-color: $silver-60;
 
   .btn-link {
     color: $btn-primary-background;
-    text-transform: capitalize;
+    text-transform: none;
     background-color: transparent;
 
     &:hover,
