--- a/src/styles/base/_navs.scss
+++ b/src/styles/base/_navs.scss
@@ -95,7 +95,6 @@ $lt-tab-color: $lt-text-color;
 
       &:hover,
       &:focus {
-        font-weight: 700;
         background-color: transparent;
         outline: 0;
 
